[api] rename paths, update package doc,
## Api paths are renamed:
    o /oc3/feed/daemon/ping
    o /oc3/feed/daemon/status
    o /oc3/feed/system

    Previous /oc3/daemon/system/package will be handled by /oc3/feed/system

## All accepted POST /feed/... have now status code 202 Accepted

## Document what is expected package

## package handlers renamed to apihandlers

## bump api version to 1.0.1
   We still allow patch (not yet in production)
