# api/codegen_type_gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.0.0 DO NOT EDIT.
 package api
 
+import (
+	"time"
+)
+
 const (
 	BasicAuthScopes  = "basicAuth.Scopes"
 	BearerAuthScopes = "bearerAuth.Scopes"
@@ -29,18 +33,24 @@ type Problem struct {
 }
 
 // Package defines model for package.
-type Package = map[string]interface{}
+type Package struct {
+	Arch        string     `json:"arch"`
+	InstalledAt *time.Time `json:"installed_at,omitempty"`
+	Name        string     `json:"name"`
+	Sig         string     `json:"sig"`
+	Type        string     `json:"type"`
+	Version     string     `json:"version"`
+}
 
 // System defines model for system.
-type System = map[string]interface{}
+type System struct {
+	Package *[]Package `json:"package,omitempty"`
+}
 
 // Version defines model for version.
 type Version struct {
 	Version string `json:"version"`
 }
-
-// N200 defines model for 200.
-type N200 = Problem
 
 // N400 defines model for 400.
 type N400 = Problem
@@ -54,16 +64,13 @@ type N403 = Problem
 // N500 defines model for 500.
 type N500 = Problem
 
-// PostDaemonStatusParams defines parameters for PostDaemonStatus.
-type PostDaemonStatusParams struct {
+// PostFeedDaemonStatusParams defines parameters for PostFeedDaemonStatus.
+type PostFeedDaemonStatusParams struct {
 	XDaemonChange *string `json:"XDaemonChange,omitempty"`
 }
 
-// PostDaemonStatusJSONRequestBody defines body for PostDaemonStatus for application/json ContentType.
-type PostDaemonStatusJSONRequestBody = NodeStatus
+// PostFeedDaemonStatusJSONRequestBody defines body for PostFeedDaemonStatus for application/json ContentType.
+type PostFeedDaemonStatusJSONRequestBody = NodeStatus
 
-// PostDaemonSystemJSONRequestBody defines body for PostDaemonSystem for application/json ContentType.
-type PostDaemonSystemJSONRequestBody = System
-
-// PostDaemonSystemPackageJSONRequestBody defines body for PostDaemonSystemPackage for application/json ContentType.
-type PostDaemonSystemPackageJSONRequestBody = Package
+// PostFeedSystemJSONRequestBody defines body for PostFeedSystem for application/json ContentType.
+type PostFeedSystemJSONRequestBody = System
